# blueprint

./: .gitmodules  .rustfmt.toml  Cargo.toml
sample/: sample.bp
src/: blueprint.rs  bp.rs  main.rs  markup.rs  model.rs  resource.rs  template.rs
src/grammar/: blueprint.pest
template/: head.html  macros.html  nav_top.html  page.html  page_body.html  page_header.html  page_main.html  requirement.html
test/sample/: sample.bp
test/template/: page.html
