[package]
name = "blueprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
clap_derive = "3.2.7"
include_dir = { version="0.7.2", features=["glob"] }
peg = "0.8.0"
serde = { version="1.0.140", features=["derive"] }
serde_json = "1.0.82"
tera = "1.16.0"
